# ResourceManager

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ResourceHandle.h  embed_resource.cpp
include/ResourceManager/: ResourceHandle.h
src/: embed_resource.cpp
test/: CMakeLists.txt  res.txt  res2.txt  test_main.cpp
test/resources/: res.txt
test/src/: test_main.cpp
